Parte 1 prueba practica

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.associations": {
-        "validaciones.h": "c"
+        "validaciones.h": "c",
+        "cjson.h": "c",
+        "ctype.h": "c",
+        "stdio.h": "c",
+        "stdbool.h": "c",
+        "string.h": "c"
     }
 }
