Se implemento opcion 7 del menu principal, y cambios varios menores

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ ARCH_CONTEO_THREADS=conteo_threads/main
 CANTIDAD_THREADS=4
 MAPA_ARCHIVOS=data/conteo_palabras/mapa_archivos.txt
 STOP_WORD=data/conteo_palabras/stop_word.txt
+PATH_INPUT=tests/inputs
+PATH_OUTPUT=tests/outputs
+EXTENSION=.txt
