--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ ARCH_CONTEO_THREADS=conteo_threads/main
 CANTIDAD_THREADS=4
 MAPA_ARCHIVOS=data/conteo_palabras/mapa_archivos.txt
 STOP_WORD=data/conteo_palabras/stop_word.txt
+PATH_INPUT_FILTER=tests/inputs_filter
 PATH_INPUT=tests/inputs
 PATH_OUTPUT=tests/outputs
 EXTENSION=.txt
