FILTRO STOPWORD CON THREADS LISTO SOLO FALTA EL CONTEO Y TAMOS DADOS

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ PATH_INPUT_FILTER=tests/inputs_filter
 PATH_INPUT=tests/inputs
 PATH_OUTPUT=tests/outputs
 EXTENSION=.txt
+PATH_COPY=tests/inputs_filter
