Nuevas variables de entorno

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ PATH_INPUT=tests/inputs
 PATH_OUTPUT=tests/outputs
 EXTENSION=.txt
 PATH_COPY=tests/inputs_filter
+PROCESOS=data/planificador/procesos.txt
+CANTIDAD_CORES=4
+RESULTADOS=data/planificador/resultados.txt
