Problema 1: Primera parte

--- a/.env
+++ b/.env
@@ -7,7 +7,6 @@ MAPA_ARCHIVOS=data/conteo_palabras/mapa_archivos.txt
 STOP_WORD=data/conteo_palabras/stop_word.txt
 INVERTED_INDEX=data/conteo_palabras/inverted_index.INDEX
 INVERTED_INDEX_PROCESS=indice_invertido/main
-PATH_INPUT_FILTER=tests/inputs_filter
 PATH_INPUT=tests/inputs
 PATH_OUTPUT=tests/outputs
 EXTENSION=.txt
@@ -15,3 +14,9 @@ PATH_COPY=tests/inputs_filter
 PROCESOS=data/planificador/procesos.txt
 CANTIDAD_CORES=4
 RESULTADOS=data/planificador/resultados.txt
+ARRAY_THREADS=1,2,4,8,16
+REPETICIONES=2
+DATOS=data/ejecutador/salida.txt
+GRAFICO=data/ejecutador/grafico.png
+PROG_EJECUTADOR=ejecutador/main
+PROG_ANALIZADOR=analizador/main
