cambios al menu principal y planificador no terminado

--- a/.env
+++ b/.env
@@ -20,3 +20,6 @@ DATOS=data/ejecutador/salida.txt
 GRAFICO=data/ejecutador/grafico.png
 PROG_EJECUTADOR=ejecutador/main
 PROG_ANALIZADOR=analizador/main
+PATH_PLANIFICADOR=planificador/main
+PATH_DISTRIBUIDOR=distribuidor/main
+PATH_CORE=core/main
