--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "file_utils.h": "c",
         "menu.h": "c",
         "opciones.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "utils.h": "c",
+        "comms.h": "c"
     }
 }
