Respaldo para mi proximo movimiento

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ CANTIDAD_CORES=4
 RESULTADOS=data/planificador/resultados.txt
 ARRAY_THREADS=1,2,4,8,16
 REPETICIONES=2
+PATH_ANALIZADOR=python analizador.py
 DATOS=data/ejecutador/salida.txt
 GRAFICO=data/ejecutador/grafico.png
 PROG_EJECUTADOR=ejecutador/main
