Infraestructura de mensajes para busqueda

--- a/.env
+++ b/.env
@@ -24,3 +24,11 @@ PROG_ANALIZADOR=analizador/main
 PATH_PLANIFICADOR=planificador/main
 PATH_DISTRIBUIDOR=distribuidor/main
 PATH_CORE=core/main
+PATH_BUSCADOR=buscador/main
+PATH_CACHE=cache/main
+PATH_MOTOR_BUSQUEDA=motor_busqueda/main
+MEMORY_SIZE=10
+TOPK=10
+PUERTO_CACHE=8080
+PUERTO_MOTOR_BUSQUEDA=8081
+PATH_MENU_PRINCIPAL=menu_principal/main
